--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@types/jquery": "^3.5.5",
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "ngx-mat-datetime-picker": "^3.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^10.16.6",
     "tslib": "^1.10.0",
