--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.1.0",
     "@angular/animations": "~8.2.9",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
@@ -25,7 +26,6 @@
     "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
-    "ngx-mat-datetime-picker": "^3.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^10.16.6",
     "tslib": "^1.10.0",
